--- a/homework/homework_1.py.ipynb
+++ b/homework/homework_1.py.ipynb
@@ -231,27 +231,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kurze def 1\n"
+      "Philomena Essed definiert Rassismus als ein alltägliches Phänomen. Es umfasst „eine Ideologie, eine Struktur und ein[en] Prozess, mittels derer bestimmte Gruppierungen auf der Grundlage tatsächlicher oder zugeschriebener biologischer oder kultureller Eigenschaften als wesensmäßig andersgeartete und minderwertige ‚Rassen‘ oder ethnische Gruppen angesehen werden (Essed 1992: 375).“ Dieser Definition liegt ein sehr breites Verständnis von Rassismus zugrunde, das neben biologischen und kulturellen Argumentationen die Rolle von Strukturen und Institutionen hervorhebt, die Rassismen re- und produzieren. Essed macht mit ihrem \"Konzept des alltäglichen Rassismus\" aus dem Jahr 1991 Rassismus als ideologisches Phänomen und als Teil der sozialen Struktur verständlich und erfasst dadurch Rassismus als ein alltägliches Phänomen, das die individuelle Wahrnehmung und somit die persönlichen Erfahrungen und Vorstellungen auf einer individuellen Ebene alltäglich stark beeinflusst (vgl. Essed 1991: 156ff.)\n"
      ]
     }
    ],
    "source": [
-    "Grundbegriffe = {'soziale Interaktion' : {'Autor_innen': 'Mead, Robert',\n",
-    "                                         'Definition1': 'kurze def 1'},\n",
-    "                 'feminismus' : {'Autor_innen': 'hooks, bell',\n",
-    "                                 'Definition2': 'kurze def 2'},\n",
-    "                 'dritter Grundbegriff' : {'Autor_innen': 'dritte Autorin',\n",
-    "                                          'Definition3': 'kurze def 3'}\n",
-    "                }\n",
+    "Grundbegriffe = {'Symbolischer Interaktionismus' : {'Autor_innen': 'Mead, Weber, Parsons',\n",
+    "                                         'Definition': 'Interaktion ist im symbolischen Interaktionismus ein permanenter Prozess des Handelns, \\n\\\n",
+    "Beobachtens und Entwerfens weiterer Handlungen, in dem ego und alter wechselseitig die vermuteten Rollenerwartungen \\\n",
+    "des anderen übernehmen oder ablehnen, darauf reagieren und weiteres Handeln antizipieren. \\\n",
+    "Wechselseitige Interpretationen definieren die Situation, bestimmen, worum es geht oder nicht gehen soll, \\\n",
+    "und leiten das Handeln an. Nicht vorgegebene Normen ermöglichen die Interaktion, sondern die gemeinsame Festlegung, \\\n",
+    "welchen Sinn die Interaktion hat. Voraussetzung für das Gelingen von Interaktion ist die Fähigkeit zur Perspektivenübernahme. \\\n",
+    "Diese Auffassung von Interaktion vertritt gegen das normative Paradigma das interpretative Paradigma. (Wikipedia)'},\n",
+    "                 'social norms' : {'Autor_innen': 'Cialdini, Baumeister',\n",
+    "                                 'Definition': 'There are two types of social norms that are identified in social psychology literature: \\\n",
+    "descriptive norms and injunctive norms. „Descriptive norms refer to what most people \\\n",
+    "in a group think, feel, or do“ (e.g. „Most Germans are punctual“), while „prescriptive or \\\n",
+    "injunctive norms refer to what most people in a group approve of (e.g. „You shouldn’t \\\n",
+    "come late to work“) (Baumeister & Vohs, 2007, p. 629). The distinction here is between \\\n",
+    "what is true of group members (descriptive) and what ought to be true of group \\\n",
+    "members (injunctive) (Baumeister & Vohs, 2007, p. 629). Both types of norms have \\\n",
+    "been found to encourage norm-consistent behavior (Reno, Cialdini, & Kallgren, 1993).'},\n",
+    "                 'Alltagsrassismus' : {'Autor_innen': 'Hall, Balibar, Miles, Essed, Terkessides, Sow, Jäger',\n",
+    "                                       'Definition': 'Philomena Essed definiert Rassismus als ein alltägliches Phänomen. \\\n",
+    "Es umfasst „eine Ideologie, eine Struktur und ein[en] Prozess, mittels derer bestimmte Gruppierungen \\\n",
+    "auf der Grundlage tatsächlicher oder zugeschriebener biologischer oder kultureller Eigenschaften als wesensmäßig \\\n",
+    "andersgeartete und minderwertige ‚Rassen‘ oder ethnische Gruppen angesehen werden (Essed 1992: 375).“ \\\n",
+    "Dieser Definition liegt ein sehr breites Verständnis von Rassismus zugrunde, das neben biologischen und \\\n",
+    "kulturellen Argumentationen die Rolle von Strukturen und Institutionen hervorhebt, \\\n",
+    "die Rassismen re- und produzieren. Essed macht mit ihrem \"Konzept des alltäglichen Rassismus\" \\\n",
+    "aus dem Jahr 1991 Rassismus als ideologisches Phänomen und \\\n",
+    "als Teil der sozialen Struktur verständlich und erfasst dadurch Rassismus als ein alltägliches Phänomen, \\\n",
+    "das die individuelle Wahrnehmung und somit die persönlichen Erfahrungen und \\\n",
+    "Vorstellungen auf einer individuellen Ebene alltäglich stark beeinflusst (vgl. Essed 1991: 156ff.)'}\n",
+    "                                      }\n",
     "\n",
-    "print(Grundbegriffe['soziale Interaktion']['Definition1'])"
+    "print(Grundbegriffe['Alltagsrassismus']['Definition'])"
    ]
   },
   {
